package app.dtos;

public record UserDTO(String username, String password) {
}
