package app.dtos;

public record VoteDTO(Integer votes) {
}
